--- a/index.html
+++ b/index.html
@@ -5,6 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Create PDF</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
+    <style>
+        /* Add CSS for button spacing */
+        #chapter-buttons {
+            margin-top: 20px; /* Margin above the buttons */
+        }
+        button {
+            margin: 10px; /* Margin around each button */
+            padding: 10px 15px; /* Padding inside the button */
+            font-size: 16px; /* Increase font size for better readability */
+            cursor: pointer; /* Change cursor to pointer on hover */
+            border: none; /* Remove default border */
+            border-radius: 5px; /* Add rounded corners */
+            background-color: #007BFF; /* Button background color */
+            color: white; /* Text color */
+            transition: background-color 0.3s; /* Transition for hover effect */
+        }
+        button:hover {
+            background-color: #0056b3; /* Darker blue on hover */
+        }
+    </style>
 </head>
 <body>
 
